--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
+    "react-multi-carousel": "^2.8.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
