--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
